swag bug修复
